--- a/demo/redux-react-director3/index.html
+++ b/demo/redux-react-director3/index.html
@@ -61,6 +61,22 @@
     	  }
     	}
     </style>
+    <script id='initData' type="text/json">
+    {
+        "userList": [
+            {
+                "uId": 0,
+                "name": "zenki",
+                "sex": 1,
+                "birthday": 1466739193229,
+                "eat": true,
+                "sleep": true,
+                "beat": true,
+                "phone": 13333333333
+            }
+        ]
+    }
+    </script>
   </head>
   <body>
     <div id="root">
